tests/specs/test/worker_terminate_pending_promise/main.out
running 1 test from ./main.ts
pending promise waits for worker termination ... FAILED ([WILDCARD])

 ERRORS 

pending promise waits for worker termination => ./main.ts:1:6
error: Promise resolution is still pending but the event loop has already resolved.
A promise was awaited that can never settle: no remaining async work (timer, I/O, worker, etc.) can resolve it.
Note: `--trace-leaks` cannot help here because nothing was leaked; there is no pending operation left that could resolve the promise.

 FAILURES 

pending promise waits for worker termination => ./main.ts:1:6

FAILED | 0 passed | 1 failed ([WILDCARD])

error: Test failed
